# sqlschm

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_corpus.py
sqlschm/: __init__.py  generator.py  lexer.py  parser.py  sql.py  tok.py
tests/: test_lexer.py  test_parser.py  test_sql.py  test_sqlschm.py  test_tok.py
tests_corpus/valid/: basic-autoincrement.ast  basic-autoincrement.out  basic-autoincrement.sql  basic-typeless.ast  basic-typeless.out  basic-typeless.sql  basic.ast  basic.out  basic.sql  check.ast  check.out  check.sql  collate.ast  collate.out  create-select.ast  create-select.out  create-select.sql  default-function-call.ast  default-function-call.out  default-function-call.sql  default.ast  default.out  default.sql  empty.ast  foreign-key-deferred.ast  foreign-key-deferred.out  foreign-key-deferred.sql  foreign-key-match.ast  foreign-key-match.out  foreign-key-match.sql  foreign-key.ast  foreign-key.out  foreign-key.sql  generated.ast  generated.out  generated.sql  index-partial.ast  index-partial.out  index-partial.sql  index-unique.ast  (+49 more)
